[project]
name = "screening-core"
version = "0.1.0a0"
description = "Shared LLM evaluation backends and runtime utilities for screening pipeline apps"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Shinobu Yokoyama" }]

dependencies = [
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
openai = [
    "openai>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/screening_core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
